JenkinとTomcatとJVM環境が構築できるAnsible-playbookを作成しました

--- a/jenkins-site.yml
+++ b/jenkins-site.yml
@@ -1,10 +1,9 @@
-# Setup Environment for Manve Project
-- hosts: all
+# Setup Environment for Jenkins Server
+- hosts: jenkins
   connection: local
   become: yes
   roles:
     - common
     - curl
     - git
-    - openjdk
-    - maven
+    - jenkins
