--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -3,36 +3,36 @@
   group: name=tomcat
 
 - name: add user "tomcat"
-  user: name=tomcat group=tomcat home=/usr/local/tomcat createhome=no
+  user: name=tomcat group=tomcat home=/usr/local/share/tomcat createhome=no
   become: True
   become_method: sudo
 
 - name: download and unarchive Tomcat
   unarchive:
     src: http://ftp.jaist.ac.jp/pub/apache/tomcat/tomcat-9/v{{ tomcat_version }}/bin/apache-tomcat-{{ tomcat_version }}.tar.gz
-    dest: /usr/local
+    dest: /opt
     remote_src: yes
 
 - name: Symlink Tomcat directory
   file:
-    src: /usr/local/apache-tomcat-{{ tomcat_version }}
-    dest: /usr/local/tomcat
+    src: /opt/apache-tomcat-{{ tomcat_version }}
+    dest: /usr/local/share/tomcat
     state: link
     force: yes
 
 - name: Change ownership of Tomcat installation
-  file: path=/usr/local/tomcat owner=tomcat group=tomcat state=directory recurse=yes
+  file: path=/usr/local/share/tomcat owner=tomcat group=tomcat state=directory recurse=yes
 
 - name: Configure Tomcat server
-  template: src=server.xml dest=/usr/local/tomcat/conf/
+  template: src=server.xml dest=/usr/local/share/tomcat/conf/
   notify: restart tomcat
 
 - name: Configure Tomcat users
-  template: src=tomcat-users.xml dest=/usr/local/tomcat/conf/
+  template: src=tomcat-users.xml dest=/usr/local/share/tomcat/conf/
   notify: restart tomcat
 
 - name: Configure Tomcat context
-  template: src=context.xml dest=/usr/local/tomcat/webapps/manager/META-INF/
+  template: src=context.xml dest=/usr/local/share/tomcat/webapps/manager/META-INF/
   notify: restart tomcat
 
 - name: Install Tomcat init script
