--- a/roles/maven/tasks/main.yml
+++ b/roles/maven/tasks/main.yml
@@ -1,7 +1,7 @@
 # install apache-maven
 - name: download and unarchive apache-maven
   unarchive:
-    src: http://ftp.meisei-u.ac.jp/mirror/apache/dist/maven/maven-3/{{ maven_version }}/binaries/apache-maven-{{ maven_version }}-bin.tar.gz
+    src: http://ftp.riken.jp/net/apache/maven/maven-3/{{ maven_version }}/binaries/apache-maven-{{ maven_version }}-bin.tar.gz
     dest: /opt
     remote_src: yes
 
