--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -12,6 +12,9 @@
 - name: install Jenkins
   yum: name=jenkins state=latest
 
+- name: Change ownership of Jenkins installation
+  file: path=/usr/lib/jenkins owner=jenkins group=jenkins state=directory recurse=yes
+
 # Start Jenkins Service
 - name: service jenkins start
   service: name=jenkins state=started enabled=yes
